# cathartic

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: chunk.c  debug.c  main.c  memory.c  value.c
src/include/: chunk.h  debug.h  memory.h  value.h
